--- a/app/src/main/res/layout/detail_bluetooth_service_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_service_item.xml
@@ -1,35 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_margin="7dp"
-    android:background="@null"
-    app:cardBackgroundColor="@color/colorPrimaryDark"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="7dp"
-    app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp">
+    style="@style/DetailItemCard"
+    app:cardBackgroundColor="@color/colorPrimaryDark">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="20dp"
-        android:background="@null"
-        android:orientation="vertical">
+    <LinearLayout style="@style/DetailItemFrame">
 
         <TextView
             android:id="@+id/detail_parent_list_item_service_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@null"
+            style="@style/DetailItemTextView"
             android:text="@string/detail_parent_list_item_service_title"
             android:textColor="#fff"
             android:textSize="20sp" />
@@ -42,29 +21,16 @@
 
             <TextView
                 android:id="@+id/detail_parent_list_item_service_UUID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
+                style="@style/DetailItemTextView"
                 android:layout_gravity="center_vertical|start"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:background="@null"
-                android:text="@string/detail_parent_list_item_service_UUID"
-                android:textColor="#fff" />
+                android:text="@string/detail_parent_list_item_service_UUID" />
 
             <TextView
                 android:id="@+id/detail_parent_list_item_service_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
+                style="@style/DetailItemTextView"
                 android:layout_weight="1"
-                android:background="@null"
                 android:text="@string/detail_parent_list_item_service_type"
                 android:textColor="#eee" />
         </LinearLayout>
