--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -3,24 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nursing_drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:fitsSystemWindows="true">
+    style="@style/DrawerLayout">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/nursing_coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@null"
-        tools:context=".MainActivity">
+        style="@style/CoordinatorLayout"
+        tools:context=".activity.nurse.MainNursingActivity">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/nursing_appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            style="@style/AppBarLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,9 +89,6 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nursing_nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        style="@style/NavigationView"
         app:menu="@menu/menu_nursing" />
 </android.support.v4.widget.DrawerLayout>
