--- a/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
@@ -1,51 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_margin="7dp"
-    android:background="@null"
-    app:cardBackgroundColor="#ff8c00"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="7dp"
-    app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp">
+    style="@style/DetailItemCard"
+    app:cardBackgroundColor="@color/colorPrimaryOrange">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="20dp"
-        android:background="@null"
-        android:orientation="vertical">
+    <LinearLayout style="@style/DetailItemFrame">
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@null"
+            style="@style/DetailItemTextView"
             android:text="@string/detail_child_list_item_characteristics_title"
-            android:textColor="#fff"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_UUID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@null"
-            android:text="@string/detail_child_list_item_characteristics_UUID"
-            android:textColor="#fff" />
+            style="@style/DetailItemTextView"
+            android:text="@string/detail_child_list_item_characteristics_UUID" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
