--- a/app/src/main/res/layout/fragment_detail_characteristic.xml
+++ b/app/src/main/res/layout/fragment_detail_characteristic.xml
@@ -2,6 +2,4 @@
 
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/detail_characteristic_recyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light" />
+   style="@style/DeviceItemRecyclerView"/>
