--- a/app/src/main/res/layout/fragment_detail_service.xml
+++ b/app/src/main/res/layout/fragment_detail_service.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/detail_service_recyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:foreground="?android:windowContentOverlay" />
+    style="@style/DeviceItemRecyclerView" />
