--- a/app/src/main/res/layout/main_bluetooth_device_item.xml
+++ b/app/src/main/res/layout/main_bluetooth_device_item.xml
@@ -1,152 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/device_item_card"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_margin="5dp"
-    android:background="@null"
+    style="@style/MainItemCard"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="7dp"
-    app:cardPreventCornerOverlap="false"
-    app:contentPadding="0dp">
+    android:foreground="?android:attr/selectableItemBackground">
 
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:orientation="vertical"
         android:padding="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@null"
-            android:orientation="horizontal">
+        <TableRow style="@style/MainItemTableRow">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                style="@style/MainItemLabel"
                 android:text="@string/detail_name"
                 android:textColor="#4169e1" />
 
             <TextView
                 android:id="@+id/item_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:text="Medium Text"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                style="@style/MainItemText"
                 android:textColor="#4169e1" />
-        </LinearLayout>
+        </TableRow>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@null"
-            android:orientation="horizontal">
+        <TableRow style="@style/MainItemTableRow">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                style="@style/MainItemLabel"
                 android:text="@string/detail_address"
                 android:textColor="#dc143c" />
 
             <TextView
                 android:id="@+id/item_address"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                style="@style/MainItemText"
                 android:textColor="#dc143c" />
+        </TableRow>
 
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@null"
-            android:orientation="horizontal">
+        <TableRow style="@style/MainItemTableRow">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                style="@style/MainItemLabel"
                 android:text="@string/bond_state" />
 
             <TextView
                 android:id="@+id/item_bond"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:text="Small Text"
+                style="@style/MainItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
+        </TableRow>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@null"
-            android:orientation="horizontal">
+        <TableRow style="@style/MainItemTableRow">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                style="@style/MainItemLabel"
                 android:text="@string/detail_type" />
 
             <TextView
                 android:id="@+id/item_type"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:text="Small Text"
+                style="@style/MainItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
 
+        </TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:background="@null"
-            android:orientation="horizontal">
+        <TableRow style="@style/MainItemTableRow">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
+                style="@style/MainItemLabel"
                 android:text="@string/detail_rssi" />
 
             <TextView
                 android:id="@+id/item_rssi"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:text="Small Text"
+                style="@style/MainItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
+        </TableRow>
+    </TableLayout>
 </android.support.v7.widget.CardView>
