--- a/app/src/main/res/values/styles_detail.xml
+++ b/app/src/main/res/values/styles_detail.xml
@@ -6,10 +6,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_marginEnd">10dp</item>
-        <item name="android:layout_marginStart">20dp</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_margin">7dp</item>
         <item name="android:background">@null</item>
         <item name="android:textColor">#fff</item>
     </style>
