--- a/app/src/main/res/layout/activity_nursing_splash.xml
+++ b/app/src/main/res/layout/activity_nursing_splash.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/nursingPrimary">
-
 
     <FrameLayout
         android:id="@+id/nursing_start_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@null">
-
-
-    </FrameLayout>
-</FrameLayout>
+        android:background="@null" />
+</RelativeLayout>
