--- a/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
@@ -13,70 +13,55 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nursing_add_user_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            style="@style/AddUserInput">
 
             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/edit_add_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/AddUserEditText"
                 android:hint="@string/add_user_name_hint"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nursing_add_user_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            style="@style/AddUserInput">
 
             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/edit_add_user_age"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/AddUserEditText"
                 android:hint="@string/add_user_age_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nursing_add_user_height"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            style="@style/AddUserInput">
 
             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/edit_add_user_height"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/AddUserEditText"
                 android:hint="@string/add_user_height_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nursing_add_user_weight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            style="@style/AddUserInput">
 
             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/edit_add_user_weight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/AddUserEditText"
                 android:hint="@string/add_user_weight_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nursing_add_user_step"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            style="@style/AddUserInput">
 
             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/edit_add_user_step"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/AddUserEditText"
                 android:hint="@string/add_user_step_hint"
                 android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
@@ -91,7 +76,7 @@
 
             <RadioButton
                 android:id="@+id/radio_man"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="true"
@@ -99,48 +84,36 @@
 
             <RadioButton
                 android:id="@+id/radio_woman"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/add_user_woman" />
         </RadioGroup>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="50dp"
-            android:background="@null"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="7dp"
-            app:cardPreventCornerOverlap="false"
-            app:contentPadding="0dp">
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical">
 
-            <com.rainbow.kam.bt_scanner.tools.design.RippleView
-                android:id="@+id/nursing_add_user_skip"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:background="@null"
-                app:rv_zoom="true">
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/nursing_next_fab"
+                style="@style/Fab"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="end"
+                android:src="@drawable/ic_launcher_arrow_next"
+                app:backgroundTint="@color/colorAccent" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:background="@null"
-                    android:text="@string/add_user_skip"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-            </com.rainbow.kam.bt_scanner.tools.design.RippleView>
-        </android.support.v7.widget.CardView>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/nursing_skip_fab"
+                style="@style/Fab"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="start"
+                android:src="@drawable/ic_launcher_arrow_next"
+                app:backgroundTint="@color/colorAccent" />
+        </RelativeLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/nursing_next_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:background="@null"
-            android:src="@drawable/ic_launcher_arrow_next"
-            app:backgroundTint="@color/accent" />
     </LinearLayout>
 </ScrollView>
