--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,7 @@
     <dimen name="first">10dp</dimen>
     <dimen name="second">15dp</dimen>
     <dimen name="third">20dp</dimen>
+
+
+    <dimen name="AddUserInput_margin">10dp</dimen>
 </resources>
