--- a/app/src/main/res/values/styles_add_user.xml
+++ b/app/src/main/res/values/styles_add_user.xml
@@ -7,7 +7,7 @@
     </style>
 
     <style name="AddUserInput" parent="AddUserEditText">
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_margin">@dimen/AddUserInput_margin</item>
     </style>
 
     <style name="Fab">
