--- a/app/src/main/res/values/styles_detail.xml
+++ b/app/src/main/res/values/styles_detail.xml
@@ -8,7 +8,7 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_margin">7dp</item>
         <item name="android:background">@null</item>
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">@color/nursingPrimary_light</item>
     </style>
 
     <style name="DetailItemFrame">
@@ -42,7 +42,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">end|center_vertical</item>
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">@color/nursingPrimary_light</item>
     </style>
 
     <style name="DeviceText">
@@ -63,7 +63,7 @@
         <item name="android:background">@null</item>
         <item name="android:layout_gravity">end</item>
         <item name="android:layout_weight">0</item>
-        <item name="android:textColor">#666</item>
+        <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -77,18 +77,18 @@
     </style>
 
     <style name="DeviceCharacteristicSubInfoLabel" parent="DeviceCharacteristicInfoLabel">
-        <item name="android:textColor">#888</item>
+        <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">10sp</item>
         <item name="android:layout_marginBottom">7dp</item>
     </style>
 
     <style name="DeviceCharacteristicSubInfo" parent="DeviceCharacteristicInfo">
-        <item name="android:textColor">#888</item>
+        <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">10sp</item>
         <item name="android:layout_marginBottom">7dp</item>
     </style>
 
-    <style name="DeviceCharacteristicButton" >
+    <style name="DeviceCharacteristicButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">1dp</item>
