--- a/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_add_user.xml
@@ -97,7 +97,7 @@
             android:gravity="center_vertical">
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/nursing_next_fab"
+                android:id="@+id/nursing_accept_fab"
                 style="@style/Fab"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
